# c-cpp-embedded-file-example

./: .gitignore  README.md  main.c  meson.build
assembly/: dtddata.S  hello.txt  main.c  meson.build
glib-compile-resources/: meson.build
xxd/: hello.txt  main.c  meson.build
